--- a/project.html
+++ b/project.html
@@ -344,16 +344,16 @@
                     <h5 class="text-white mb-4">Project Gallery</h5>
                     <div class="row g-2">
                         <div class="col-4">
-                            <img class="img-fluid rounded" src="img/gallery-1.jpg" alt="">
+                            <img class="img-fluid rounded" src="img/gallery-1.jpeg" alt="">
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded" src="img/gallery-2.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded" src="img/gallery-3.jpg" alt="">
+                            <img class="img-fluid rounded" src="img/gallery-3.jpeg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid rounded" src="img/gallery-4.jpg" alt="">
+                            <img class="img-fluid rounded" src="img/gallery-4.jpeg" alt="">
                         </div>
                         <div class="col-4">
                             <img class="img-fluid rounded" src="img/gallery-5.jpg" alt="">
